# utils

./: .gitignore  README.md  __init__.py  pyproject.toml
hanspeterradtke/utils/open_router/: README.md  __init__.py  prompt.txt
hanspeterradtke/utils/open_router/tests/: test_open_router.py  test_script_01.py  test_script_02.py
hanspeterradtke/utils/parser/: README.md
hanspeterradtke/utils/parser/tests/: test_parser.py
hanspeterradtke/utils/table_reader/: README.md
hanspeterradtke/utils/tests/: test_all_utils.py
hpr/utils/open_router/: README.md  debug_prompt.txt
hpr/utils/open_router/tests/: test_open_router.py
hpr/utils/parser/: README.md  __init__.py  __main__.py
hpr/utils/parser/tests/: test_parser.py
hpr/utils/table_reader/: README.md  __init__.py
hpr/utils/tests/: test_all_utils.py
hpr/utils/ui_interface/: README.md  __init__.py  __main__.py  accessibility.py  main.py  programs.py  test.py
hpr/utils/ui_interface/tests/: cli_test.py  full_test.py  test_ui.py
open_router/: README.md  __init__.py  __main__.py  output.txt
open_router/tests/: test_filelist.py  test_open_router.py
parser/: __main__.py
parser/tests/: test_parser.py
tests/: test_all_utils.py
