[build-system]
requires      = ["setuptools>=64", "wheel"]
build-backend =  "setuptools.build_meta"

[project]
name            = "hanspeterradtke-utils"
version         = "0.1.0"
description     = "General utility modules"
readme          = "README.md"
requires-python = ">=3.8"
dependencies    = []

[tool.setuptools.packages.find]
where   = ["."]
include = ["hanspeterradtke*"]

